language-puppet (1.3.20) UNRELEASED; urgency=medium

  * Add `length` as an alias to `size`.

 -- Simon Marechal <simon.marechal@edf.fr>  Tue, 24 Jul 2018 17:47:07 +0200

language-puppet (1.3.19.1) xenial; urgency=medium

  * Relaxed yaml version bounds

 -- Simon Marechal <simon.marechal@edf.fr>  Wed, 11 Jul 2018 09:38:28 +0200

language-puppet (1.3.19) xenial; urgency=medium

  * Added prefix and suffix functions (Fix #246)
  * Many travis/GHC fixes

 -- Simon Marechal <simon.marechal@edf.fr>  Thu, 05 Jul 2018 09:36:55 +0200

language-puppet (1.3.17) artful; urgency=medium
  * Loose upperbound for servant to include 0.13
  * Loose upperbound for exceptions to include 0.10.0
  * Fix #241

 -- Simon Marechal <bartavelle@gmail.com> UNRELEASED

language-puppet (1.3.16) artful; urgency=medium
  [ PierreR ]
  * Fix #213 Hash lookup failing in erb template

 -- Simon Marechal <bartavelle@gmail.com>  Thu, 01 Mar 2018 17:48:48 +0100

language-puppet (1.3.15) artful; urgency=medium

  * Improve parsing error messages
  * Improve source position display
  * Support OS X via filecache-0.3
  * Add ability to use the json ruby module in erbs

 -- Bartavelle <bartavelle@gmail.com>  Sun, 18 Feb 2018 20:40:57 +0100

language-puppet (1.3.14) xenial; urgency=medium

  * Allow declaring type of variables during assignment
  * The `lookup` function now fails if an input strategy is unknown
  * Display all errors when testing file sources in optional tests (not just the first one).
  * Fix haddock rendering
  * Re-organize haskell modules to strengthen dependency paths

 -- Simon Marechal <simon.marechal@edf.fr>  Tue, 06 Feb 2018 17:54:51 +0100

language-puppet (1.3.13) xenial; urgency=medium

  * Support for a "rebasefile" option to make file() calls with absolute files relative to another directory.
  * Fix an infinite loop with fqdn_rand
  * Recognize v5 hiera configuration format
  * Added debian stuff
  * Support for the hiera module layer
  * Support new lookup puppet function
